--- a/templates/src/app.ts.ejs
+++ b/templates/src/app.ts.ejs
@@ -6,7 +6,6 @@ import helmet from 'helmet';
 dotenv.config();
 
 const app = express();
-const PORT = process.env.PORT || 3000;
 
 // Security & basics
 app.use(helmet());
@@ -48,6 +47,4 @@ import { extendPrototypes } from './utils/extend-prototypes';
 extendPrototypes();  // Uncomment to enable utils
 <% } %>
 
-app.listen(PORT, () => {
-  console.log(`Server running on http://localhost:${PORT}`);
-});
+export default app;
