--- a/templates/src/server.ts.ejs
+++ b/templates/src/server.ts.ejs
@@ -1,7 +1,6 @@
 <% if (answers.language === 'TypeScript') { %>
 import app from "./app";
-<% } %>
-<% if (answers.language === 'JavaScript') { %>
+<% } else { %>
 import app from "./app.js";
 <% } %>
 
