--- a/templates/src/utils/extend-prototypes.ts.ejs
+++ b/templates/src/utils/extend-prototypes.ts.ejs
@@ -61,8 +61,7 @@ export function extendPrototypes() {
 
   console.log('🔧 Prototypes extended safely (non-enumerable)');
 }
-<% } %>
-<% if (answers.language === "JavaScript") { %>
+<% } else { %>
 export function extendPrototypes() {
   // Array.binarySearch (assumes sorted array)
   if (typeof Array.prototype.binarySearch === 'undefined') {
@@ -122,7 +121,5 @@ export function extendPrototypes() {
       configurable: true
     });
   }
-
-  console.log('🔧 Prototypes extended safely (non-enumerable)');
 }
 <% } %>
