--- a/templates/src/app.ts.ejs
+++ b/templates/src/app.ts.ejs
@@ -6,6 +6,17 @@ import express, { Request, Response } from 'express';
 import dotenv from 'dotenv';
 import cors from 'cors';
 import helmet from 'helmet';
+<% if (answers.parser) { %>
+import bodyParser from 'body-parser';
+<% } %>
+<% if (answers.logger) { %>
+import morgan from 'morgan';
+<% } %>
+<% if (answers.orm === 'Prisma') { %>
+import { PrismaClient } from '@prisma/client';
+<% } else if (answers.orm === 'Sequelize') { %>
+import { Sequelize } from 'sequelize';
+<% } %>
 
 dotenv.config();
 
@@ -15,18 +26,14 @@ app.use(helmet());
 app.use(cors());
 
 <% if (answers.parser) { %>
-import bodyParser from 'body-parser';
 app.use(bodyParser.json());
 <% } %>
 <% if (answers.logger) { %>
-import morgan from 'morgan';
 app.use(morgan('combined'));
 <% } %>
 <% if (answers.orm === 'Prisma') { %>
-import { PrismaClient } from '@prisma/client';
 const prisma = new PrismaClient();
 <% } else if (answers.orm === 'Sequelize') { %>
-import { Sequelize } from 'sequelize';
 const sequelize = new Sequelize(process.env.DATABASE_URL || 'postgres://localhost:5432/mydb');
 <% } %>
 <% if (answers.language === 'JavaScript') { %>
