--- a/templates/src/app.ts.ejs
+++ b/templates/src/app.ts.ejs
@@ -17,6 +17,13 @@ import { PrismaClient } from '@prisma/client';
 <% } else if (answers.orm === 'Sequelize') { %>
 import { Sequelize } from 'sequelize';
 <% } %>
+<% if (answers.extendPrototypes) { %>
+<% if (answers.language === 'JavaScript') { %>  
+import { extendPrototypes } from './utils/extend-prototypes.js';
+<% } else { %>
+import { extendPrototypes } from './utils/extend-prototypes';
+<% } %>
+<% } %>
 
 dotenv.config();
 
@@ -58,11 +65,6 @@ app.use((err: any, req: any, res: any, next: any) => {
 });
 <% } %>
 <% if (answers.extendPrototypes) { %>
-<% if (answers.language === 'JavaScript') { %>  
-import { extendPrototypes } from './utils/extend-prototypes.js';
-<% } else { %>
-import { extendPrototypes } from './utils/extend-prototypes';
-<% } %>
 extendPrototypes();  // Comment to disable utils
 <% } %>
 
