--- a/templates/src/server.ts.ejs
+++ b/templates/src/server.ts.ejs
@@ -1,8 +1,8 @@
-<% if (answers.language === 'TypeScript') { %>
+<% if (answers.language === 'TypeScript') { -%>
 import app from "./app";
-<% } else { %>
+<% } else { -%>
 import app from "./app.js";
-<% } %>
+<% } -%>
 
 const PORT = process.env.PORT || 3000;
 
