--- a/templates/src/routes/index.ts.ejs
+++ b/templates/src/routes/index.ts.ejs
@@ -1,5 +1,7 @@
-// Your routes main export module
+import { Router } from "express"
 
-const routes = {};
+const router = Router();
 
-export default routes;
+// Your routes goes here
+
+export default router;
