--- a/templates/src/app.ts.ejs
+++ b/templates/src/app.ts.ejs
@@ -12,10 +12,19 @@ import bodyParser from 'body-parser';
 <% if (answers.logger) { -%>
 import morgan from 'morgan';
 <% } -%>
-<% if (answers.orm === 'Prisma') { -%>
-import { PrismaClient } from '@prisma/client';
-<% } else if (answers.orm === 'Sequelize') { -%>
-import { Sequelize } from 'sequelize';
+<% if (answers.orm === "Prisma") { -%>
+<% if (answers.language === "TypeScript") { -%>
+import { prisma } from "./config/db"
+<% } else { -%>
+import { prisma } from "./config/db.js"
+<% } -%>
+<% } -%>
+<% if (answers.orm === "Sequelize") { -%>
+<% if (answers.language === "TypeScript") { -%>
+import { sequelize, connectDB } from "./config/db"
+<% } else { -%>
+import { sequelize, connectDB } from "./config/db.js"
+<% } -%>
 <% } -%>
 <% if (answers.extendPrototypes) { -%>
 <% if (answers.language === 'JavaScript') { -%>  
@@ -38,13 +47,7 @@ app.use(bodyParser.json());
 app.use(morgan('combined'));
 <% } -%>
 
-<% if (answers.orm === 'Prisma') { -%>
-const prisma = new PrismaClient();
-<% } else if (answers.orm === 'Sequelize') { -%>
-const sequelize = new Sequelize(process.env.DATABASE_URL || 'postgres://localhost:5432/mydb');
-<% } -%>
-
-<% if (answers.language === 'JavaScript') { %>
+<% if (answers.language === 'JavaScript') { -%>
 app.get('/', (req, res) => {
   res.json({ message: 'Hello from ExpressStart!' });
 });
@@ -54,7 +57,7 @@ app.get('/', (req: Request, res: Response) => {
 });
 <% } -%>
 
-<% if (answers.language === 'JavaScript') { %>
+<% if (answers.language === 'JavaScript') { -%>
 app.use((err, req, res, next) => {
   console.error(err.stack);
   res.status(500).json({ error: 'Something broke!' });
@@ -65,7 +68,8 @@ app.use((err: any, req: any, res: any, next: any) => {
   res.status(500).json({ error: 'Something broke!' });
 });
 <% } -%>
-<% if (answers.extendPrototypes) { %>
+
+<% if (answers.extendPrototypes) { -%>
 extendPrototypes(); // Comment to disable utils
 <% } -%>
 
