Fix: validator templating on scaffolding

--- a/templates/src/config/env.ts.ejs
+++ b/templates/src/config/env.ts.ejs
@@ -3,7 +3,7 @@ import dotenv from "dotenv";
 <% if (answers.validator === "Joi") { -%>
 import Joi from "joi";
 <% } else { -%>
-import { z } from "zod";
+import * as z from "zod";
 <% } -%>
 
 dotenv.config();
@@ -90,7 +90,7 @@ export const env = Object.freeze({
 <% if (answers.validator === "Joi") { -%>
 import Joi from "joi";
 <% } else if (answers.validator === "Zod") { -%>
-import { z } from "zod";
+import * as z from "zod";
 <% } -%>
 
 dotenv.config();
@@ -100,24 +100,19 @@ const envSchema = Joi.object({
   NODE_ENV: Joi.string()
     .valid("development", "production", "test")
     .default("development"),
-
   PORT: Joi.number().default(3000),
-
   DATABASE_URL: Joi.string().uri().required().messages({
     "any.required": "DATABASE_URL is required in .env",
     "string.uri": "DATABASE_URL must be a valid URI",
   }),
-
   <% if (answers.auth === "JWT") { -%>
   JWT_SECRET: Joi.string().required().messages({
     "any.required": "JWT_SECRET is required in .env",
   }),
   <% } -%>
-
   <% if (answers.cache === "REDIS") { -%>
   REDIS_URL: Joi.string().optional(),
   <% } -%>
-
   <% if (answers.logger) { -%>
     LOG_LEVEL: Joi.string().default("info"),
   <% } -%>
@@ -135,22 +130,17 @@ if (error) {
 <% } else if (answers.validator === "Zod") { -%>
 const envSchema = z.object({
   NODE_ENV: z.enum(["development", "production", "test"]).default("development"),
-
   PORT: z.coerce.number().default(3000),
-
   DATABASE_URL: z
     .string()
     .url({ message: "DATABASE_URL must be a valid URI" })
     .nonempty("DATABASE_URL is required in .env"),
-
   <% if (answers.auth === "JWT") { -%>
   JWT_SECRET: z.string().nonempty("JWT_SECRET is required in .env"),
   <% } -%>
-
   <% if (answers.cache === "REDIS") { -%>
   REDIS_URL: z.string().optional(),
   <% } -%>
-
   <% if (answers.logger) { -%>
     LOG_LEVEL: z.string().default("info"),
   <% } -%>
