--- a/templates/src/config/db.js.ejs
+++ b/templates/src/config/db.js.ejs
@@ -1,6 +1,6 @@
 <% if (answers.orm === "Sequelize") { -%>
 import { Sequelize } from 'sequelize';
-import { env } from './env';
+import { env } from './env.js';
 
 export const sequelize = new Sequelize(env.dbUrl, {
   logging: false,
